--- a/css/style.css
+++ b/css/style.css
@@ -32606,7 +32606,7 @@ color: #02d4b1;
 	box-shadow: inset 0 0 0 var(--border-size) currentcolor;
 	transition: background 0.8s ease;
   }
-  .button:hover {
+  .buttonsiguiente:hover {
 	background: rgba(100, 0, 0, 0.03);
   }
   .button__horizontal, .button__vertical {
@@ -32634,7 +32634,7 @@ color: #02d4b1;
 	left: calc(var(--vertical-offset) * -1);
 	right: calc(var(--vertical-offset) * -1);
   }
-  .button:hover .button__horizontal {
+  .buttonsiguiente:hover .button__horizontal {
 	transform: scaleX(0);
   }
   .button__vertical {
@@ -32648,6 +32648,6 @@ color: #02d4b1;
 	left: calc(var(--horizontal-offset) - var(--border-size));
 	right: calc(var(--horizontal-offset) - var(--border-size));
   }
-  .button:hover .button__vertical {
+  .buttonsiguiente:hover .button__vertical {
 	transform: scaleY(0);
   }
